tests/ui/parser/issues/issue-70549-resolve-after-recovered-self-ctor.stderr
error: expected identifier, found keyword `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:4:17
   |
LL |     fn foo(&mur Self) {}
   |                 ^^^^ expected identifier, found keyword

error: expected one of `:`, `@`, or `|`, found keyword `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:4:17
   |
LL |     fn foo(&mur Self) {}
   |            -----^^^^
   |            |    |
   |            |    expected one of `:`, `@`, or `|`
   |            help: declare the type after the parameter binding: `<identifier>: <type>`

error: unexpected lifetime `'static` in pattern
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:8:13
   |
LL |     fn bar(&'static mur Self) {}
   |             ^^^^^^^ help: remove the lifetime

error: expected identifier, found keyword `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:8:25
   |
LL |     fn bar(&'static mur Self) {}
   |                         ^^^^ expected identifier, found keyword

error: expected one of `:`, `@`, or `|`, found keyword `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:8:25
   |
LL |     fn bar(&'static mur Self) {}
   |            -------------^^^^
   |            |            |
   |            |            expected one of `:`, `@`, or `|`
   |            help: declare the type after the parameter binding: `<identifier>: <type>`

error: expected one of `:`, `@`, or `|`, found keyword `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:14:17
   |
LL |     fn baz(&mur Self @ _) {}
   |                 ^^^^ expected one of `:`, `@`, or `|`

error[E0533]: expected unit struct, found self constructor `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:4:17
   |
LL |     fn foo(&mur Self) {}
   |                 ^^^^ not a unit struct

error[E0533]: expected unit struct, found self constructor `Self`
  --> $DIR/issue-70549-resolve-after-recovered-self-ctor.rs:8:25
   |
LL |     fn bar(&'static mur Self) {}
   |                         ^^^^ not a unit struct

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0533`.
